--- a/www/app/apps/leads/menu.html
+++ b/www/app/apps/leads/menu.html
@@ -11,7 +11,7 @@
 
   <ion-content class="pele-background">
 
-    <div ng-if="1" class="apps-front-menu">
+    <div class="apps-front-menu">
       <button ui-sref="app.leads.lead" class="button button-large button-stable button-block text-center">
       פתיחת ליד חדש
     </button>
