--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -10,6 +10,9 @@
   </ion-nav-title>
   <ion-content class="pele-background">
     <div class="list">
+      <a class="item  item-icon-right" ui-sref="app.dev.network">
+          <i class="icon ion-trash-b"></i>
+      </a>
       <a class="item pele_rtl">LocalStorage usage :  {{getLocalStorageUsage().mb}} MB  <br \>
       largest - {{getLocalStorageUsage().largetKey}} :  {{getLocalStorageUsage().maxSize}}</a>
       <a class="item  pele_rtl">PELE4U_MSISDN  <br \>
