--- a/www/app/apps/dev/network.html
+++ b/www/app/apps/dev/network.html
@@ -13,7 +13,8 @@
   <ion-content>
     <ion-list>
       <ion-item>
-        network {{network}} <br \> isOnline:{{isOnline}}
+
+        date : {{date|date :'dd.MM.yyyy &nbsp; HH:mm:ss.sss'}}<br \>network : {{network}} <br \> isOnline:{{isOnline}}
       </ion-item>
     </ion-list>
   </ion-content>
