--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -92,7 +92,7 @@
 
             </label>
         <label class="item no-border item-input item-text-wrap">
-            <textarea wrap="off"  ng-modle="lead.NOTE"></textarea>
+            <textarea wrap="off"  ng-model="lead.NOTE"></textarea>
             </label>
       </div>
     </ion-content>
