--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -1,9 +1,10 @@
 <div ng-repeat="e in extraSchema">
   <ng-switch on="e.type">
     <label class="item no-border item-input">
+
     <span class="input-label"><span ng-show="e.require">*</span> {{e.label}}</span>
-          <input name="{{e.name}}" ng-switch-when="text" type="text" ng-model="e.value" value="{{e.value}}" ng-required="e.required">
-        <input name="{{e.name}}" ng-switch-when="number" type="text" ng-model="e.value" value="{{e.value}}" ng-required="e.required">
+      <input name="{{e.attribute_name}}" ng-switch-when="text" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required">
+      <input name="{{e.attribute_name}}" ng-switch-when="number" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required">
       <select ng-switch-when="select" class="form-control" ng-model="e.value">
 			 <option ng-repeat="option in e.options" value="{{option.value}}">{{option.label}}</option>
 			</select>
@@ -19,8 +20,9 @@
 			</label>
     </fieldset>
     </label>
-    <label ng-show="leadform[e.name].$invalid && (leadform[e.name].$dirty || submitted)" class="item no-border input-error">
-          יש להזין שם פרטי
+
+    <label ng-show="leadform[e.attribute_name].$invalid && (leadform[e.attribute_name].$dirty || submitted)" class="item no-border input-error">
+      ערך לא תקין
           </label>
   </ng-switch>
 </div>
