--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -92,8 +92,8 @@
 
             </label>
         <label class="item no-border item-input item-text-wrap">
-            <textarea wrap="off"  ng-model="lead.NOTE"></textarea>
-            </label>
+            <textarea wrap="true" ng-model="lead.NOTE"></textarea>
+        </label>
       </div>
     </ion-content>
     <!--ion-footer-bar style="height:50px;max-height:50px" align-title="right">
