--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -1,28 +1,42 @@
-<div ng-repeat="e in extraSchema">
-  <ng-switch on="e.type">
-    <label class="item no-border item-input">
-
+<ng-form name="attributes">
+  <div ng-repeat="e in extraSchema">
+    <ng-switch on="e.type">
+      <label class="item no-border item-input">
     <span class="input-label"><span ng-show="e.require">*</span> {{e.label}}</span>
       <input name="{{e.attribute_name}}" ng-switch-when="text" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required">
+      <input name="{{e.attribute_name}}" ng-switch-when="date" type="date" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required" min="setMinDate(e)" max="setMaxDate(e)">
       <input name="{{e.attribute_name}}" ng-switch-when="number" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required">
-      <select ng-switch-when="select" class="form-control" ng-model="e.value">
-			 <option ng-repeat="option in e.options" value="{{option.value}}">{{option.label}}</option>
+      <select name="{{e.attribute_name}}" ng-switch-when="select" class="form-control" ng-model="e.value" ng-required="e.required">
+         <option ng-if="option.k != undefined" ng-repeat="option in e.options" value="{{option.k}}">{{option.v}}</option>
+         <option ng-if="option.k == undefined" ng-repeat="option in e.options" value="{{option}}">{{option}}</option>
 			</select>
-      <fieldset ng-switch-when="radio">
+      <fieldset ng-switch-when="radio" ng-required="e.required">
         <span class="input-label">* {{e.label}}</span>
         <label ng-repeat="option in e.options">
-				 <input type="radio" ng-model="e.value" value="{{e.value}}"> {{option.label}}
+				 <input name="{{e.attribute_name}}" type="radio" ng-model="e.value" value="{{e.k}}"> {{option.v}}
 			  </label>
-    </fieldset>
-    <fieldset ng-switch-when="checkboxes">
-      <label ng-repeat="option in e.options">
-			      <input type="checkbox" ng-model="e.value[tokenize(option.name)]" value="{{option.value}}"> {{option.name}} &nbsp;
+      </fieldset>
+      <fieldset ng-switch-when="checkbox">
+        <label>
+         <input name="{{e.attribute_name}}" type="checkbox" ng-model="e.value[tokenize(option.name)]" value="{{option.value}}" ng-required="e.required"> {{option.name}} &nbsp;
+      </label>
+      </fieldset>
+      <fieldset ng-switch-when="checkboxes">
+        <label ng-repeat="option in e.options">
+			   <input name="{{e.attribute_name}}" type="checkbox" ng-model="e.value[tokenize(option.name)]" value="{{option.value}}" ng-required="e.required"> {{option.name}} &nbsp;
 			</label>
-    </fieldset>
+      </fieldset>
+      <div ng-switch-when="html" type="text" ng-bind-html="e.html">{{e.html}}</div>
+      </label>
+      <label ng-switch-when="textarea" class="item no-border item-input item-text-wrap">
+        <textarea name="{{e.attribute_name}}"  rows="e.rows" cols="e.cols" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required"></textarea>
     </label>
-
-    <label ng-show="leadform[e.attribute_name].$invalid && (leadform[e.attribute_name].$dirty || submitted)" class="item no-border input-error">
+      <!--label ng-if="e.attribute_name" ng-show="leadform.attributes[e.attribute_name].$invalid && (leadform.attributes[e.attribute_name].$dirty || submitted)" class="item no-border input-error">
       ערך לא תקין
-          </label>
-  </ng-switch>
-</div>
+    </label-->
+      <label ng-if="e.attribute_name" ng-show="leadform.attributes[e.attribute_name].$invalid && submitted" class="item no-border input-error">
+      ערך לא תקין
+    </label>
+    </ng-switch>
+  </div>
+</ng-form>
