--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -6,7 +6,7 @@
       <input name="{{e.attribute_name}}" ng-switch-when="text" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required">
       <input name="{{e.attribute_name}}" ng-switch-when="date" type="date" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required" min="setMinDate(e)" max="setMaxDate(e)">
       <input name="{{e.attribute_name}}" ng-switch-when="number" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required">
-      <select name="{{e.attribute_name}}" ng-switch-when="select" class="form-control" ng-model="e.value" ng-required="e.required">
+      <select class="select" name="{{e.attribute_name}}" ng-switch-when="select" class="form-control" ng-model="e.value" ng-required="e.required">
          <option ng-if="option.k != undefined" ng-repeat="option in e.options" value="{{option.k}}">{{option.v}}</option>
          <option ng-if="option.k == undefined" ng-repeat="option in e.options" value="{{option}}">{{option}}</option>
 			</select>
@@ -37,6 +37,25 @@
       <label ng-if="e.attribute_name" ng-show="leadform.attributes[e.attribute_name].$invalid && submitted" class="item no-border input-error">
       ערך לא תקין
     </label>
+      <!--
+    leadform.attributes[e.attribute_name].$error.pattern
+    leadform.attributes[e.attribute_name].$error.required
+    all list :
+    email
+    max
+    maxlength
+    min
+    minlength
+    number
+    pattern
+    required
+    url
+    date
+    datetimelocal
+    time
+    week
+    month
+    -->
     </ng-switch>
   </div>
 </ng-form>
