--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -161,8 +161,7 @@
             test 3: <input type="file" accept="image/*" capture>
           </div>
           <div>
-            <h3>test 4 (capture bool, video)</h3>
-            <input type="file" accept="video/*" capture>
+            <button ng-click="takePic()">Take a pic </button>
           </div>
           <div class="col col-33"> <button ngf-select ngf-multiple="false" ngf-capture="'other'" class="button  button-stable text-center" ngf-pattern="'image/*'" ng-model="picFile">
          <i class="icon ion-ios-camera-outline"></i>
